fixed navbar position (add z-index)

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   text-align:center;
   overflow: hidden;
   background-color: #333;
+  z-index: 5
 }
 
 #navbar a {
